# RoboCam-Suite2.0

./: .gitignore  README.md  REPRODUCIBILITY.md  debug_playerone.py  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  start_robocam.sh  test_playerone_capture.py
archive/: README.md
archive/RoboCam-Suite-1.0/: .gitignore  FILE_AUDIT.md  PLANNED_CHANGES.md  README.md  ROOM_FOR_IMPROVEMENT.md  _config.yml  calibrate.py  experiment.py  fix_dependencies.sh  index.md  preview.py  requirements.txt  setup.sh  start_calibrate.sh  start_experiment.sh  start_preview.sh
archive/RoboCam-Suite-1.0/config/: default_config.json  motion_config.json
archive/RoboCam-Suite-1.0/docs/: CALIBRATE_PY_README.md  CAMERA_ARCHITECTURE.md  DEVELOPER_GUIDE.md  EXPERIMENT_PY_README.md  FFMPEG_INSTALLATION.md  PLAYER_ONE_MARS_SDK.md  PREVIEW_PY_README.md  USER_GUIDE.md
archive/RoboCam-Suite-1.0/robocam/: __init__.py  camera_backend.py  camera_preview.py  (+15 more)
docs/: DEVELOPER_GUIDE.md  FEATURE_GAP_ANALYSIS.md  GAP_ANALYSIS.md  RoboCam-Suite_2.0_Technical_Assessment.md  research_notes.md
robocam_suite/: __main__.py  hw_manager.py  logger.py  session_manager.py  test_camera.py
robocam_suite/config/: config_manager.py  default_config.json
robocam_suite/core/: camera.py  gpio_controller.py  motion_controller.py
robocam_suite/experiments/: experiment.py  well_plate.py
robocam_suite/ui/: calibration_panel.py  camera_widget.py  experiment_panel.py  main_window.py  manual_control_panel.py  profile_slider.py  quick_capture_widget.py  setup_panel.py
scripts/: install_playerone_sdk.py
(+15 files in other folders)
