[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robocam-suite"
version = "2.0.0"
description = "Modular robotic camera control suite for automated imaging experiments"
requires-python = ">=3.10"
dependencies = [
    "pyserial",
    "numpy",
    "opencv-python",
    "PySide6",
]

[project.optional-dependencies]
# Install on Windows for real camera device names and WIA Imaging Device detection:
#   pip install -e ".[windows]"
windows = [
    "cv2-enumerate-cameras",
    "wmi",
]

[project.scripts]
robocam = "robocam_suite.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["robocam_suite*"]
